--- a/app/modules/companies/templates/companies/redemptions.html
+++ b/app/modules/companies/templates/companies/redemptions.html
@@ -156,5 +156,5 @@
 {% endblock %}
 
 {% block portal_scripts %}
-    <script src="{{ url_for('company_portal.static', filename='companies/js/redemptions.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='companies/js/company_redemptions.js') }}" defer></script>
 {% endblock %}
