--- a/app/modules/companies/templates/companies/settings.html
+++ b/app/modules/companies/templates/companies/settings.html
@@ -106,5 +106,5 @@
 {% endblock %}
 
 {% block portal_scripts %}
-    <script src="{{ url_for('company_portal.static', filename='companies/js/settings.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='companies/js/company_settings.js') }}" defer></script>
 {% endblock %}
