--- a/app/modules/admin/templates/admin/dashboard/admin_base.html
+++ b/app/modules/admin/templates/admin/dashboard/admin_base.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1Gq3h45p2QPRdhR+M3XwEnG7qqg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="{{ url_for('admin.static', filename='admin/admin.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='admin/admin.css') }}">
     {% block extra_head %}{% endblock %}
 </head>
 <body class="admin-body">
@@ -114,12 +114,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-        const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
-        tooltipTriggerList.map(function (tooltipTriggerEl) {
-            return new bootstrap.Tooltip(tooltipTriggerEl);
-        });
-    </script>
+    <script src="{{ url_for('static', filename='admin/js/admin_layout.js') }}" defer></script>
     {% block extra_scripts %}{% endblock %}
 </body>
 </html>
