--- a/app/modules/admin/templates/admin/dashboard/admin_base.html
+++ b/app/modules/admin/templates/admin/dashboard/admin_base.html
@@ -29,6 +29,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.dashboard_home') }}">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.dashboard_users') }}">Users</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.list_companies') }}">Companies</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.dashboard_offers') }}">Offers</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('admin.reports_home') }}">Reports</a></li>
                     {% if current_user and current_user.is_authenticated %}
@@ -59,6 +60,12 @@
                         <a class="nav-link d-flex align-items-center {% if current_page == 'users' %}active{% endif %}" href="{{ url_for('admin.dashboard_users') }}" data-bs-toggle="tooltip" data-bs-placement="right" title="Users">
                             <i class="fas fa-users me-3"></i>
                             <span>Users</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link d-flex align-items-center {% if current_page == 'companies' %}active{% endif %}" href="{{ url_for('admin.list_companies') }}" data-bs-toggle="tooltip" data-bs-placement="right" title="Companies">
+                            <i class="fas fa-building me-3"></i>
+                            <span>الشركات</span>
                         </a>
                     </li>
                     <li class="nav-item">
